<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/light_background_primary"
    android:padding="16dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_your"
        android:textColor="@color/primaryDarkColor"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/in_minutes"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:textColor="@color/secondaryDarkColor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@color/secondaryLightColor" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="64sp" />

    <Button
        android:id="@+id/date_pick_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primaryDarkColor"
        android:text="@string/button"
        android:textColor="@color/cardview_light_background" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="32sp" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textColor="@color/primaryColor"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_date"
        android:textColor="@color/primaryTextColor"
        android:textSize="14sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/diff_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textColor="@color/primaryColor"
        android:textSize="32sp"
        android:textStyle="bold"
        android:paddingVertical="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes"
        android:textColor="@color/primaryTextColor"
        android:textSize="14sp"
        android:textStyle="normal" />

</LinearLayout>